# android-cmake-debug

./: .gitignore  README  cmake.cmd  cmake.sh
CMake/: CMakeLists.txt
CMake/auto_included/: add_sources.cmake  add_subdirectory_recurse_safe.cmake  android_helpers.cmake  configurations_support.cmake  include_if_exists.cmake
cmake/: platform.cmake
cmake/auto_included/: create_source_groups.cmake  project_group.cmake
cmake/auto_included/stuff/: ndk-gdb.py.in
sources/: CMakeLists.txt
sources/TeapotNativeActivity/: CMakeLists.txt  sources.cmake
sources/TeapotNativeActivity/android/cpufeatures/: CMakeLists.txt
sources/TeapotNativeActivity/android/native_app_glue/: CMakeLists.txt
sources/TeapotNativeActivity/android/ndk_helper/: CMakeLists.txt
